Update About Me styling, add project images, and fix mobile Tech Skills visibility

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -16,18 +16,18 @@
   max-width: calc(100% - 15px);
 }
 .about-me h3 {
-  font-size: 25px;
+  font-size: calc(4vw + 25px);
   text-transform: uppercase;
-  letter-spacing: 7px;
-  font-weight: 400;
-  color: var(--accentColor);
+  font-weight: 600;
+  margin-bottom: 30px;
+  line-height: calc(4vw + 20px);
 }
 
 .about-me p {
-  font-size: 33px;
-  font-weight: 600;
-  line-height: 36px;
-  letter-spacing: 1px;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 28px;
+  letter-spacing: 0.7px;
 }
 
 @media only screen and (min-width: 600px) {
@@ -59,13 +59,13 @@
     width: 50%;
   }
   .about-me p {
-    font-size: 1.9vw;
-    line-height: 2.3vw;
+    font-size: 18px;
+    line-height: 28px;
   }
 }
 @media only screen and (min-width: 1950px) {
   .about-me p {
-    font-size: 2.5rem;
-    line-height: 2.7rem;
+    font-size: 20px;
+    line-height: 32px;
   }
 }
